# ReportManager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test-docs/: 首页.html
test-docs/项目A/: 设计文档.html  需求文档.html
test-docs/项目B/: 技术文档.md  项目总结.html
