[package]
name = "report-manager"
version = "0.2.0"
description = "ReportManager - HTML/Markdown 文档管理工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "report_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
